--- a/IMAP.Popup/TaskbarIconResource.xaml
+++ b/IMAP.Popup/TaskbarIconResource.xaml
@@ -40,11 +40,11 @@
                     <DropShadowEffect Color="#FF747474" />
                 </Border.Effect>
                
-            <StackPanel Orientation="Horizontal">
-                    <Image Source="/Images/mail_icon.png" Margin="15" Width="80" Height="80" />
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Foreground="#FFECAD25" Margin="10" FontWeight="Bold" Text="Mail Checker" FontSize="18" HorizontalAlignment="Left" />
-                        <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <Image Source="/Images/appicon-image.png" Margin="10" Width="70" Height="70" />
+                    <StackPanel Orientation="Vertical" Margin="5,25,5,5">
+                        <TextBlock Foreground="#FFECAD25" FontWeight="Bold" Text="Mail Checker" FontSize="18" HorizontalAlignment="Left" />
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <TextBlock FontSize="15" Foreground="#FFECAD25" Text="Unread Mails : "/>
                             <TextBlock FontSize="15" Foreground="#FFECAD25" Text="{Binding UnreadMailCount}" cal:Bind.Model="IMAP.Popup.ViewModels.PopupIconViewModel"/>
                         </StackPanel>
