--- a/IMAP.Popup/Views/NewMailBaloon.xaml
+++ b/IMAP.Popup/Views/NewMailBaloon.xaml
@@ -89,7 +89,8 @@
         </EventTrigger>
     </UserControl.Triggers>
     <Grid x:Name="grid"
-          MouseEnter="grid_MouseEnter">
+          MouseEnter="grid_MouseEnter"
+          MouseLeave="grid_MouseLeave">
         <Border HorizontalAlignment="Stretch"
                 Margin="5,5,5,5"
                 BorderThickness="1,1,1,1"
